@@ -1,3 +1,4 @@
+* Permit party administrators to edit users
 
 Version 7.4.0 - 2024-11-04
 --------------------------
